--- a/src/components/layout/Feedback/Feedback.module.scss
+++ b/src/components/layout/Feedback/Feedback.module.scss
@@ -75,18 +75,31 @@
     width: 50px;
     height: 100%;
     text-align: center;
-    float: right;
-    object-fit: fill;
+    object-fit: cover;
+    position: absolute;
+    right: 0;
+    border-radius: 5px;
   }
 
   .apostrof{
     font-size: 75px;
     text-align: center;
-    height:75px;
+    height:50px;
   }
 
-   .text {
+  .text {
     text-align: center;
+  }
+
+  .name {
+    position: relative;
+  }
+
+  .name p {
+    margin: 0;
+    position: absolute;               
+    top: 50%;                         
+    transform: translate(0, -50%);
   }
 
 }
