--- a/src/components/layout/Feedback/Feedback.module.scss
+++ b/src/components/layout/Feedback/Feedback.module.scss
@@ -69,6 +69,7 @@
   .imageBox {
     overflow: hidden;
     height: 75px;
+    text-align: right;
   }
   
   img {
@@ -76,7 +77,6 @@
     height: 100%;
     text-align: center;
     object-fit: cover;
-    position: absolute;
     right: 0;
     border-radius: 5px;
   }
