--- a/src/components/common/PromoProductBox/PromoProductBox.module.scss
+++ b/src/components/common/PromoProductBox/PromoProductBox.module.scss
@@ -4,10 +4,9 @@
   background-color: $color-light-primary;
   border: 1px solid $color-light-secondary;
 
-
   .photo {
     position: relative;
-    padding: 100% 10px 0 10px;
+    padding: 65% 10px 0 10px;
     background: {
       color: $color-light-tertiary;
       size: cover;
@@ -35,16 +34,17 @@
           transform: translate(-50%, -50%);
           text-transform: uppercase;
           font-weight: 600;
-          font-size: 1.3rem;
-          line-height: 1.3rem;
+          font-size: 1.2rem;
+          line-height: 1.2rem;
         }
         border-radius: 50%;
-        height: 5rem;
-        width: 5rem;
+        height: 4.5rem;
+        width: 4.5rem;
         background: $form-border-color;
         color: $white-secondary;
         text-align: center;
         position: relative;
+        margin: 4px;
       }
       visibility: hidden;
       display: flex;
@@ -124,4 +124,11 @@
    color: $primary;
   }
 
+  .price {
+    .buttonPrice {
+      margin-left: $base-padding;
+    }
+    display: flex;
+    align-items: center;
+  }
 }
