--- a/src/components/features/PromoBox/PromoBox.module.scss
+++ b/src/components/features/PromoBox/PromoBox.module.scss
@@ -1,14 +1,27 @@
 @import "../../../styles/settings.scss";
 
-.wrapper {
-  .promoTitle {
-    .dots {
-      ul {
+.promoTitle{
+  h3 {
+    margin: 0;
+    padding: 0 15px;
+    text-transform: uppercase;
+    font-size: 24px;
+  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 54px;
+  background: $text-color;
+  color: $color-light-tertiary;
+}
+.dots {
+  ul {
         margin: 0;
         padding: 0 0 0 1rem;
         list-style: none;
         background-color: inherit;
-
+        align-self: center;
+        display: flex;
         li {
           display: inline-block;
           margin-left: 0.5rem;
@@ -28,105 +41,45 @@
           }
         }
       }
-    }
-    display: flex;
-    color: $color-light-secondary;
-    align-content: center;
-    justify-content: space-between;
-    height: 50px;
-    background: $form-border-color;
-  }
+  display: flex;
+  height: 100%;
+}
 
-  .heading {
-    h3 {
-      text-transform: uppercase;
-      font-size: 18px;
-      line-height: 50px;
-      padding-left: 1rem;
+.promoWrapper {
+  display: flex;
+  height: 550px;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.productBox {
+  flex-grow: 1;
+  padding-right: $base-padding;
+}
+
+.galleryBox {
+  flex-grow: 3;
+  max-height: 100%;
+}
+
+.galleryButtons {
+  .button {
+    &:hover {
+      background: $primary;
     }
-  }
-  .galleryButtons {
-    .button {
-      &:hover {
-        background: $primary;
-      }
-      display: flex;
-      flex-grow: 1;
-      background: $form-border-color;
-      justify-content: center;
-      align-items: center;
-      color: $color-light-primary;
-    }
+    color: $color-light-secondary;
     display: flex;
-    flex-direction: row;
-    height: 4.7rem;
-  }
-  .photos {
-    .photo {
-      display: flex;
-      max-width: 100%;
-      height: auto;
-      overflow: hidden;
-      object-fit: cover;
-      object-position: center;
-    }
-    margin-left: $base-padding;
-    object-fit: cover;
-    flex-direction: column;
-    align-content: flex-end;
-    display: flex;
-    height: 100%;
-    position: relative;
+    justify-content: center;
+    flex-grow: 1;
+    align-items: center;
+    padding: 5px;
   }
   display: flex;
+  background: $text-color;
 }
 
 
-.root {
-  margin: $base-padding auto;
-  padding: 0;
-}
 
-.paddingZero {
-  padding: 0;
-}
 
-.promoDescription {
-  p:first-of-type {
-    span {
-      font-weight: bold;
-    }
-    font-size: 4rem;
-    margin: 0;
-  }
-  p:last-of-type {
-    font-size: 1.5rem;
-  }
-  position: absolute;
-  padding-top: 7%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: $color-light-primary;
-  text-transform: uppercase;
-  background: $background-transparent;
-  width: 100%;
-  height: 14rem;
-  text-align: center;
-}
-
-.shopButton {
-  position: absolute;
-  top: 67%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: $color-light-secondary;
-  padding: 12px 24px;
-  border-radius: 5px;
-  color: $black-secondary;
-  text-transform: uppercase;
-  font-weight: 600;
-
-}
 
 
