--- a/src/components/common/PromoGallery/PromoGallery.module.scss
+++ b/src/components/common/PromoGallery/PromoGallery.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/settings.scss";
+
 .root {
   .photo {
     img {
@@ -5,10 +7,43 @@
       height: 500px;
       object-fit: cover;
     }
-
   }
-  background: red;
-
+  .photoDescription {
+    .button {
+      &:hover {
+        color: $primary !important;
+      }
+      position: absolute;
+      top: 90%;
+      background: $color-light-tertiary;
+      color: $text-color;
+      padding: 12px 24px;
+      font-weight: 600;
+    }
+    p:first-of-type {
+      span {
+        font-weight: 700;
+      }
+      font-size: 55px;
+      margin: 0;
+    }
+    p:last-of-type{
+      font-size: 26px;
+    }
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: $background-transparent;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    color: $color-light-primary;
+  }
+  position: relative;
   max-width: 100%;
   max-height: 100%;
 }
