Hotfix on PromoGallery

--- a/src/components/common/PromoGallery/PromoGallery.module.scss
+++ b/src/components/common/PromoGallery/PromoGallery.module.scss
@@ -17,6 +17,7 @@
       top: 90%;
       background: $color-light-tertiary;
       color: $text-color;
+      border-radius: 5px;
       padding: 12px 24px;
       font-weight: 600;
     }
