--- a/src/components/common/PromoGallery/PromoGallery.module.scss
+++ b/src/components/common/PromoGallery/PromoGallery.module.scss
@@ -44,6 +44,22 @@
     text-transform: uppercase;
     color: $color-light-primary;
   }
+  .galleryButtons {
+    .button {
+      &:hover {
+        background: $primary;
+      }
+      color: $color-light-secondary;
+      display: flex;
+      justify-content: center;
+      flex-grow: 1;
+      align-items: center;
+      padding: 5px;
+    }
+    display: flex;
+    background: $text-color;
+  }
+
   position: relative;
   max-width: 100%;
   max-height: 100%;
