finish changes vol.2

--- a/src/components/common/Gallery/Gallery.module.scss
+++ b/src/components/common/Gallery/Gallery.module.scss
@@ -148,7 +148,7 @@
         }
 
         .tabButtons {
-            transform: translateY(25%);
+            padding-top: 20%;
 
             .buttonIcon {
 
