--- a/src/components/features/FurnitureGallery/FurnitureGallery.module.scss
+++ b/src/components/features/FurnitureGallery/FurnitureGallery.module.scss
@@ -29,8 +29,8 @@
   }
 
   .productPhoto {
-    transform: translateY(35%);
-    height: 80%;
+    padding-top: 30%;
+    height: 95%;
   
     .photo {
       position: relative;
