--- a/src/components/common/PromoProductBox/PromoProductBox.module.scss
+++ b/src/components/common/PromoProductBox/PromoProductBox.module.scss
@@ -3,58 +3,67 @@
 .root {
   background-color: $color-light-primary;
   border: 1px solid $color-light-secondary;
+  height: 472px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 
   .photo {
+    .image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
     position: relative;
-    padding: 65% 10px 0 10px;
-    background: {
-      color: $color-light-tertiary;
-      size: cover;
-      position: center;
-      repeat: no-repeat;
-    }
     overflow: hidden;
-    align-items: flex-end;
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 
-    .buttons {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      display: flex;
-      justify-content: space-around;
-    }
+  .buttons {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: space-around;
+  }
 
-    .countdown {
-      .number {
-        p {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          text-transform: uppercase;
-          font-weight: 600;
-          font-size: 1.2rem;
-          line-height: 1.2rem;
-        }
-        border-radius: 50%;
-        height: 4.5rem;
-        width: 4.5rem;
-        background: $form-border-color;
-        color: $white-secondary;
-        text-align: center;
-        position: relative;
-        margin: 4px;
+  .countdown {
+    .number {
+      p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 1.2rem;
+        line-height: 1.2rem;
       }
-      visibility: hidden;
-      display: flex;
-      justify-content: space-between;
+      border-radius: 50%;
+      height: 4.5rem;
+      width: 4.5rem;
+      background: $form-border-color;
+      color: $white-secondary;
+      text-align: center;
+      position: relative;
+      margin: 4px;
     }
+    visibility: hidden;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .content {
     text-align: center;
     padding: 20px;
+    background: $color-light-primary;
 
     h5 {
       color: $primary;
@@ -97,6 +106,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: $color-light-primary;
   }
 
   .buttons {
