--- a/src/components/features/PromoBox/PromoBox.module.scss
+++ b/src/components/features/PromoBox/PromoBox.module.scss
@@ -47,7 +47,7 @@
 
 .promoWrapper {
   display: flex;
-  height: 550px;
+  height: 526px;
   flex-direction: row;
   justify-content: space-between;
 }
@@ -55,6 +55,9 @@
 .productBox {
   flex-grow: 1;
   padding-right: $base-padding;
+  max-height: 100%;
+  width: 100%;
+  max-width: 33%;
 }
 
 .galleryBox {
